# ctox

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CTOX_WEB_BENCH_HANDOFF_20260608.md  Cargo.toml  HARNESS.md  NOTICE  README.md  SECURITY.md  SPEC.md  SPEC_DECODING_BUGS.md  engine.diff  install.sh  model_registry.diff  runtime_plan.diff  tickets_working_copy.diff
desktop/: Cargo.toml  build.rs
desktop/src/: app.rs  db_reader.rs  installations.rs  lib.rs  provision.rs  version_check.rs
desktop/src/views/: harness_flow.rs  mod.rs  queue.rs
harbor-adapter/: pyproject.toml
harbor-adapter/ctox_harbor/: __init__.py  agent.py
src/communication/whatsapp_rust/: Cargo.toml
src/communication/whatsapp_rust/.claude/: launch.json
src/core/harness/app-server/: BUILD.bazel  Cargo.toml  README.md
src/core/harness/apply-patch/: BUILD.bazel  Cargo.toml
src/core/mailserver/: Cargo.toml
src/core/mailserver/src/: config.rs  lib.rs
src/core/mailserver/tests/: conformance_test.rs
src/core/office-engine/: Cargo.toml
src/core/office-engine/src/: main.rs  ops.rs
src/core/rxdb/: AGENTS.md  CLAUDE.md  Cargo.toml  PORTING.md  PORT_STYLE.md  dashboard.html
src/core/rxdb/examples/: v15_scale_wire_loop.rs  v15_wire_daemon.rs
src/core/rxdb/js-fork/: README.md  bundle-contract.json  ctox-rxdb-js.manifest.json  dependency-audit-baseline.json
src/core/rxdb/revisions/: PORTING.wave-000-baseline.md  PORTING.wave-001-scope-trimmed.md  PORTING.wave-002-v1-applied.md  PORTING.wave-003-phase0-t1-foundation.md  PORTING.wave-004-phase0-utils-t3.md  PORTING.wave-005-phase0-complete.md  PORTING.wave-006-types-foundation.md  PORTING.wave-007-phase1-schema.md  PORTING.wave-008-phase1-complete.md  PORTING.wave-009-phase2-foundation.md  PORTING.wave-010-rx-storage-helper-partial.md  PORTING.wave-011-incremental-multiinstance.md  PORTING.wave-012-storage-memory-leaves.md  PORTING.wave-013-memory-helper.md  PORTING.wave-014-storage-memory-instance.md  PORTING.wave-015-storage-memory-index.md  PORTING.wave-016-phase3-start.md  PORTING.wave-017-replication-conflicts.md  PORTING.wave-018-checkpoint-meta.md  PORTING.wave-019-replication-helper.md  PORTING.wave-020-replication-protocol-control.md  PORTING.wave-021-rx-change-event.md  PORTING.wave-022-change-event-buffer.md  PORTING.wave-023-rx-query-helper.md  PORTING.wave-024-memory-query-unlocked.md  PORTING.wave-025-phase3-skeletons.md  PORTING.wave-026-replication-protocol-index-done.md  PORTING.wave-027-downstream-naive-resync.md  PORTING.wave-028-upstream-naive-initial.md  PORTING.wave-029-conflict-aware-sync.md  PORTING.wave-030-ongoing-sync.md  PORTING.wave-031-phase4-start.md  PORTING.wave-032-webrtc-end-to-end-skeleton.md  PORTING.wave-033-signaling-client-n6.md  PORTING.wave-034-rx-replication-state.md  PORTING.wave-035-storage-factory-and-fork-path.md  PORTING.wave-036-stubs-and-mini-deps.md  PORTING.wave-037-internal-store.md  PORTING.wave-038-collection-helpers-plus-plugin-helpers.md  PORTING.wave-039-query-cache-plus-cleanups.md  (+39 more)
src/core/rxdb/src/: change_event_buffer.rs  custom_index.rs  doc_cache.rs  event_reduce.rs  hooks.rs  incremental_write.rs  lib.rs  overwritable.rs  plugin.rs  plugin_helpers.rs  prelude.rs  query_cache.rs  query_fingerprint.rs  query_planner.rs  rx_change_event.rs  rx_collection.rs  rx_collection_helper.rs  rx_database.rs  rx_database_internal_store.rs  rx_document.rs  rx_document_prototype_merge.rs  rx_error.rs  rx_query.rs  rx_query_helper.rs  rx_query_mingo.rs  rx_query_single_result.rs  rx_schema.rs  rx_schema_helper.rs  rx_storage_helper.rs  rx_storage_multiinstance.rs  rxjs_compat.rs
src/core/rxdb/tests/: conformance.rs  idle_budget.rs
src/core/rxdb/tools/: assert_js_fork_bundle_contract.js  assert_js_fork_dependency_audit.js  assert_js_fork_release_evidence.js  assert_js_fork_strategy.js  assert_js_no_package_manager.js  assert_rxdb_soak_workflow.js  assert_sync_production_readiness_95.js  audit_sync_production_readiness_95_evidence.js  browser_rust_smoke.js  browser_rust_smoke_matrix.js  browser_rust_soak.js  browser_rust_split_gate.js  build_business_command_lifecycle_contract.mjs  build_business_os_module_schema_files.mjs  build_business_os_schema_contract.mjs  build_business_os_schema_hashes.mjs  build_dashboard.py  build_sync_production_readiness_95_artifact.js  build_webrtc_frame_protocol_contract.mjs  build_webrtc_rxdb_protocol_contract.mjs  business_os_connection_modes_smoke.js  business_os_production_smoke_registry.js  local_signaling_server.js  print_soak_summary.js  print_sync_production_readiness_95_report.js  print_sync_production_readiness_95_templates.js  regenerate_query_fingerprint_corpus.mjs  run_sync_production_readiness_95_app_runtime_package_gate.js  run_sync_production_readiness_95_browser_recovery_matrix.js  run_sync_production_readiness_95_full_matrix.js  run_sync_production_readiness_95_operational_gate.js  run_sync_production_readiness_95_runbook_exercises.js  run_sync_production_readiness_95_wan_turn_matrix.js
src/harness/core/: Cargo.toml
src/harness/core/src/: auth.rs  (+10 more)
src/inference/app-server-client/: BUILD.bazel  Cargo.toml  README.md
src/inference/app-server-protocol/: BUILD.bazel  Cargo.toml
src/inference/artifacts/: Cargo.toml  README.md
src/inference/cloud-requirements/: Cargo.toml
src/inference/config/: Cargo.toml
src/inference/ctox-api/: BUILD.bazel  Cargo.toml
src/inference/linux-sandbox/: BUILD.bazel  Cargo.toml  README.md
src/inference/shell-command/: Cargo.toml
src/tools/google-fetch/: Cargo.toml  browser_profile_probe.mjs  browser_profile_probe.py
src/tools/pdf-parse/: Cargo.toml  README.md
src/tools/sqlserver-mcp/: Cargo.toml  README.md
src/tools/web-stack/: Cargo.toml  README.md
tools/doc-stack/: Cargo.toml
tools/model-runtime/cli/: Cargo.toml
tools/model-runtime/core/: Cargo.toml  build.rs
tools/model-runtime/cuda/: Cargo.toml  build.rs
tools/model-runtime/cuda-primitives/: Cargo.toml
tools/model-runtime/engine/: Cargo.toml
tools/model-runtime/sdk/: Cargo.toml
tools/model-runtime/server/: Cargo.toml
(+4239 files in other folders)
