[package]
name = "ctox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["std"] }
ctox-doc-stack = { path = "tools/doc-stack" }
ctox-pdf-parse = { path = "tools/pdf-parse" }
ctox-web-stack = { path = "tools/web-stack" }
crossterm = "0.28"
git2 = "0.20"
libc = "0.2"
mailparse = "0.16"
native-tls = "0.2"
ratatui = "0.29"
regex = "1"
qrcode = "0.14"
roxmltree = "0.21"
rusqlite = { version = "0.31", features = ["bundled"] }
ring = "0.17"
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tiny_http = "0.12"
ureq = { version = "2.12", features = ["native-tls"] }
url = "2.5"
zeroize = "1.8"
zbus = "5.14"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Security",
] }
