[package]
name = "ctox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["std"] }
ctox-doc-stack = { path = "tools/doc-stack" }
ctox-pdf-parse = { path = "tools/pdf-parse" }
ctox-web-stack = { path = "tools/web-stack" }
crossterm = "0.28"
git2 = "0.20"
libc = "0.2"
mailparse = "0.16"
native-tls = "0.2"
ratatui = "0.29"
regex = "1"
qrcode = "0.14"
roxmltree = "0.21"
rusqlite = { version = "0.32", features = ["bundled"] }
ring = "0.17"
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tiny_http = "0.12"
ureq = { version = "2.12", features = ["native-tls"] }
url = "2.5"
zeroize = "1.8"
zbus = "5.14"

# Phase 1b: direct-session path — in-process codex core library
codex-core                = { path = "tools/agent-runtime/core" }
codex-app-server-client   = { path = "tools/agent-runtime/app-server-client" }
codex-app-server-protocol = { path = "tools/agent-runtime/app-server-protocol" }
codex-protocol            = { path = "tools/agent-runtime/protocol" }
codex-arg0                = { path = "tools/agent-runtime/arg0" }
codex-feedback            = { path = "tools/agent-runtime/feedback" }
codex-cloud-requirements  = { path = "tools/agent-runtime/cloud-requirements" }
codex-utils-absolute-path = { path = "tools/agent-runtime/utils/absolute-path" }
toml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[patch.crates-io]
# Mirror of tools/agent-runtime/Cargo.toml patch.crates-io so that codex-* path
# dependencies resolve against the same forks agent-runtime uses.
crossterm = { git = "https://github.com/nornagon/crossterm", branch = "nornagon/color-query" }
ratatui = { git = "https://github.com/nornagon/ratatui", branch = "nornagon-v0.29.0-patch" }
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
