[package]
name = "ctox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["std"] }
ctox-doc-stack = { path = "tools/doc-stack" }
ctox-pdf-parse = { path = "tools/pdf-parse" }
ctox-qwen3-embedding-0-6b = { path = "src/inference/models/qwen3_embedding_0_6b" }
ctox-voxtral-mini-4b-realtime-2602 = { path = "src/inference/models/voxtral_mini_4b_realtime_2602" }
ctox-voxtral-4b-tts-2603 = { path = "src/inference/models/voxtral_4b_tts_2603" }
ctox-web-stack = { path = "tools/web-stack" }
crossterm = "0.28"
git2 = "0.20"
include_dir = "0.7"
libc = "0.2"
mailparse = "0.16"
native-tls = "0.2"
ratatui = "0.29"
regex = "1"
qrcode = "0.14"
roxmltree = "0.21"
rusqlite = { version = "0.32", features = ["bundled", "hooks"] }
ring = "0.17"
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tiny_http = "0.12"
ureq = { version = "2.12", features = ["native-tls"] }
url = "2.5"
uuid = { version = "1", features = ["v4"] }
zeroize = "1.8"
zbus = "5.14"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

# CTOX agent harness (OpenAI-Codex fork). Moved from src/inference/ to
# src/harness/ so that src/inference/ is reserved for per-model
# inference crates (src/inference/models/<model>/…).
ctox-core                = { path = "src/harness/core" }
ctox-app-server-client   = { path = "src/harness/app-server-client" }
ctox-app-server-protocol = { path = "src/harness/app-server-protocol" }
ctox-protocol            = { path = "src/harness/protocol" }
ctox-arg0                = { path = "src/harness/arg0" }
ctox-feedback            = { path = "src/harness/feedback" }
ctox-cloud-requirements  = { path = "src/harness/cloud-requirements" }
ctox-utils-absolute-path = { path = "src/harness/utils/absolute-path" }
toml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rustls = { version = "0.23", features = ["ring"] }
whatsapp = { path = "src/communication/whatsapp_rust/crates/whatsapp" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Security",
] }

[dev-dependencies]
tempfile = "3"

[patch.crates-io]
# Mirror of src/harness/Cargo.toml patch.crates-io so that codex-* path
# dependencies resolve against the same forks agent-runtime uses.
crossterm = { git = "https://github.com/nornagon/crossterm", branch = "nornagon/color-query" }
ratatui = { git = "https://github.com/nornagon/ratatui", branch = "nornagon-v0.29.0-patch" }
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
