[package]
name = "ctox-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
alacritty_terminal = "0.26"
anyhow = "1"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
eframe = "0.31"
egui = "0.31"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
portable-pty = "0.8"
rfd = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
webrtc = "0.11"
