[package]
name = "ctox-doc-stack"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
ctox-pdf-parse = { path = "../pdf-parse" }
libc = "0.2"
mailparse = "0.16"
regex = "1"
roxmltree = "0.21"
rusqlite = { version = "0.32", features = ["bundled"] }
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
