[workspace]
resolver = "2"
members = [
    "crates/wha-types",
    "crates/wha-binary",
    "crates/wha-crypto",
    "crates/wha-proto",
    "crates/wha-socket",
    "crates/wha-store",
    "crates/wha-store-sqlite",
    "crates/wha-signal",
    "crates/wha-appstate",
    "crates/wha-client",
    "crates/wha-http",
    "crates/wha-media",
    "crates/whatsapp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/example/whatsapp-rust"
authors = ["whatsapp-rust contributors"]
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
wha-types     = { path = "crates/wha-types" }
wha-binary    = { path = "crates/wha-binary" }
wha-crypto    = { path = "crates/wha-crypto" }
wha-proto     = { path = "crates/wha-proto" }
wha-socket    = { path = "crates/wha-socket" }
wha-store     = { path = "crates/wha-store" }
wha-signal    = { path = "crates/wha-signal" }
wha-client    = { path = "crates/wha-client" }
wha-store-sqlite = { path = "crates/wha-store-sqlite" }
wha-appstate  = { path = "crates/wha-appstate" }
wha-http      = { path = "crates/wha-http" }
wha-media     = { path = "crates/wha-media" }

# External
thiserror     = "2"
bytes         = "1"
async-trait   = "0.1"
futures       = "0.3"
tokio         = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util", "fs"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prost         = "0.13"
prost-build   = "0.13"
protox        = "0.7"
rand          = "0.8"
rand_core     = "0.6"
hex           = "0.4"
base64        = "0.22"
flate2        = "1"
sha2          = "0.10"
md-5          = "0.10"
hmac          = "0.12"
hkdf          = "0.12"
aes-gcm       = "0.10"
aes           = "0.8"
cbc           = { version = "0.1", features = ["std"] }
x25519-dalek  = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
curve25519-dalek = { version = "4", features = ["digest"] }
uuid          = { version = "1", features = ["v4"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
once_cell     = "1"
parking_lot   = "0.12"
url           = "2"
rusqlite      = { version = "0.32", features = ["bundled"] }
reqwest       = { version = "0.12", features = ["rustls-tls-native-roots"] }
qrcode        = { version = "0.14", default-features = false, features = ["svg"] }
rustls        = { version = "0.23", features = ["ring"] }

[profile.dev]
debug = 1

[profile.release]
lto = "thin"
opt-level = 3
