[package]
name = "ctox-mailserver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
rusqlite = { version = "0.32", features = ["bundled", "hooks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mailparse = "0.16"
thiserror = "1"
tracing = "0.1"
base64 = "0.22"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["std"] }
uuid = { version = "1", features = ["v4"] }
tiny_http = "0.12"
ring = "0.17"
tempfile = "3"
