[package]
name = "ctox-office-engine"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[lib]
path = "../business_os/office_engine.rs"

[[bin]]
name = "ctox-office-engine"
path = "src/main.rs"

[dependencies]
anyhow = "1"
quick-xml = "0.37"
regex = "1"
roxmltree = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
