[package]
name = "ctox-app-server-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ctox_app_server_client"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
ctox-app-server = { workspace = true }
ctox-app-server-protocol = { workspace = true }
ctox-arg0 = { workspace = true }
ctox-core = { workspace = true }
ctox-feedback = { workspace = true }
ctox-protocol = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

