[package]
name = "ctox-artifacts"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ctox-package-manager = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "process", "time"] }
url = { workspace = true }
which = { workspace = true }

[lints]
workspace = true

