[package]
name = "ctox-linux-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ctox-linux-sandbox"
path = "src/main.rs"

[lib]
name = "ctox_linux_sandbox"
path = "src/lib.rs"

[lints]
workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
clap = { workspace = true, features = ["derive"] }
ctox-core = { workspace = true }
ctox-protocol = { workspace = true }
ctox-utils-absolute-path = { workspace = true }
landlock = { workspace = true }
libc = { workspace = true }
seccompiler = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
url = { workspace = true }

[build-dependencies]
cc = "1"
pkg-config = "0.3"
