[package]
name = "ctox-google-fetch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "brotli", "cookies", "deflate", "gzip", "http2", "native-tls", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5"
