[package]
name = "ctox-pdf-parse"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CTOX internal PDF parsing and layout pipeline"

[features]
default = ["pdfium"]
pdfium = ["dep:image", "dep:pdfium-auto", "dep:pdfium-render"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
thiserror = "2"
once_cell = "1"
pdfium-auto = { version = "0.3", optional = true }
pdfium-render = { version = "0.8.37", optional = true, default-features = true }
image = { version = "0.25", optional = true }
