[package]
name = "ctox-sqlserver-adapter"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Generic SQL Server connector for CTOX external data synchronization"

[[bin]]
name = "ctox-sqlserver-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiberius = { version = "0.12.3", default-features = false, features = ["tds73", "rustls", "tokio"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["compat"] }

[dev-dependencies]
tempfile = "3"
