[package]
name = "ctox-web-stack"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
ctox-pdf-parse = { path = "../pdf-parse" }
libc = "0.2"
rand = "0.8"
regex = "1"
roxmltree = "0.21"
rusqlite = { version = "0.32", features = ["bundled"] }
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2.12", features = ["json"] }
url = "2.5"
