[package]
name = "ctox-engine-cli"
readme = "../README.md"
authors = ["CTOX contributors"]
version.workspace = true
edition.workspace = true
description = "Command-line interface for the CTOX Candle engine"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true
default-run = "ctox-engine"

[[bin]]
name = "ctox-engine"
path = "src/main.rs"
doc = false

[[bin]]
name = "megakernel-drafter-bench"
path = "src/bin/megakernel_drafter_bench.rs"
required-features = ["cuda"]
doc = false

[[bin]]
name = "megakernel-spec-27b-bench"
path = "src/bin/megakernel_spec_27b_bench.rs"
required-features = ["cuda"]
doc = false

[[bin]]
name = "dflash-spec-27b-bench"
path = "src/bin/dflash_spec_27b_bench.rs"
required-features = ["cuda"]
doc = false

[[bin]]
name = "draft-diff-bench"
path = "src/bin/draft_diff_bench.rs"
required-features = ["cuda"]
doc = false

[[bin]]
name = "dflash-ref-bench"
path = "src/bin/dflash_ref_bench.rs"
doc = false

[[bin]]
name = "dflash-ref-inproc-bench"
path = "src/bin/dflash_ref_inproc_bench.rs"
doc = false

[[bin]]
name = "dflash-persistent-bench"
path = "src/bin/dflash_persistent_bench.rs"
doc = false

[[bin]]
name = "qwen35-parity-bench"
path = "src/bin/qwen35_parity_bench.rs"
required-features = ["cuda"]
doc = false

[[bin]]
name = "qwen35-spec-bench"
path = "src/bin/qwen35_spec_bench.rs"
required-features = ["cuda"]
doc = false

[dependencies]
engine-core = { workspace = true }
engine-server-core = { workspace = true }
engine = { workspace = true }
engine-runtime = { package = "ctox-engine-runtime", path = "../engine", version = "0.7.1-alpha.1" }
ctox-dflash-ffi = { path = "../dflash-ffi" }
ctox-qwen35-27b = { path = "../models/qwen35_27b", optional = true }
ctox-cuda-primitives = { path = "../cuda-primitives", optional = true }
half = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }

clap = { workspace = true }
clap_complete = "4.5"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
ctrlc = { workspace = true }
rustyline = { workspace = true }
directories = { workspace = true }
axum = { workspace = true, features = ["multipart", "ws"] }
either = { workspace = true }
indexmap = { workspace = true }
regex = { workspace = true }
include_dir = { workspace = true }
mime_guess = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
uuid = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
image = { workspace = true }
libloading = "0.8"
comfy-table = "7"
dirs = { workspace = true }
walkdir = { workspace = true }

[features]
default = []
# NOTE: enabling `cuda` automatically enables `flash-attn`. On NVIDIA hardware
# the engine should always go through FlashAttention — without it the decode
# hot path falls back to the reference softmax+matmul kernels and loses ~2–3×
# throughput. The installer (install.sh) already pairs the two features when
# it detects CUDA; this mutual dependency makes `cargo build --features cuda`
# do the same thing by default so dev builds don't silently regress.
#
# Pre-Ampere GPUs (compute cap < sm_80) cannot run FlashAttention v2 kernels.
# Users on V100/T4/RTX-20xx should disable it at runtime with
# `ENGINE_DISABLE_FLASH_ATTN=1` — the engine falls back to the reference
# attention path (see `using_flash_attn()` in engine-core/src/utils/mod.rs).
cuda = [
    "engine-core/cuda",
    "engine-server-core/cuda",
    "flash-attn",
    "dep:ctox-qwen35-27b",
    "ctox-qwen35-27b/cuda",
    "dep:ctox-cuda-primitives",
    "ctox-cuda-primitives/cuda",
]
nccl = ["engine-core/nccl", "engine-server-core/nccl"]
cudnn = ["engine-core/cudnn", "engine-server-core/cudnn"]
flash-attn = ["engine-core/cuda", "engine-server-core/cuda", "engine-core/flash-attn", "engine-server-core/flash-attn"]
flash-attn-v3 = ["engine-core/cuda", "engine-server-core/cuda", "engine-core/flash-attn-v3", "engine-server-core/flash-attn-v3"]
accelerate = ["engine-core/accelerate", "engine-server-core/accelerate"]
metal = ["engine-core/metal", "engine-server-core/metal"]
mkl = ["engine-core/mkl", "engine-server-core/mkl"]
ring = ["engine-core/ring", "engine-server-core/ring"]
