[package]
name = "ctox-engine-cuda"
version.workspace = true
edition.workspace = true
description = "Bare-metal CUDA primitives + kernel registry for the CTOX engine (post-candle replacement)."
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "ctox_engine_cuda"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
half = { workspace = true, features = ["bytemuck"] }
bytemuck = { workspace = true }
memmap2 = { workspace = true }

# Tokenization is pure Rust and used un-gated — the `tokenizer` module
# is always compiled so non-CUDA hosts can still round-trip prompts.
# The workspace declares `tokenizers` with default-features = false to
# avoid pulling in training/download code; we re-enable `fancy-regex`
# here because the HF `tokenizer.json` parser needs a regex backend to
# decode the pre-tokenizer split patterns. `onig` would also work but
# requires a C toolchain, and `fancy-regex` is pure Rust and matches
# what `toktrie_hf_tokenizers` already turns on in the `core` crate.
tokenizers = { workspace = true, features = ["fancy-regex"] }

# cudarc provides typed wrappers over CUDA runtime / driver / cuBLAS +
# raw CudaSlice<T> for owning device buffers. We use it as the thin
# foundation layer only — NOT as an abstraction — so every kernel
# launch and memcpy is explicit.
cudarc = { version = "0.17", default-features = false, features = [
    "cuda-12060",
    "dynamic-linking",
    "driver",
    "cublas",
    "nvrtc",
    "f16",
], optional = true }

[build-dependencies]
# No build-time CUDA compilation yet. The first few kernels will be
# authored as .cu files, compiled to PTX at build time, and embedded
# via include_bytes!(). That pipeline gets added when the first real
# kernel lands (rmsnorm_rope_qkv_fused).

[features]
default = []
# Gates every CUDA-touching code path. When off the crate compiles to
# an empty stub so the workspace build on non-CUDA hosts (the Mac
# dev box, CI shapes without nvcc) still succeeds.
cuda = ["dep:cudarc"]
